@@ -1,5 +1,9 @@
 2007-02-15  Dalibor Topic  <robilad@kaffe.org>
 
+	* jartool.c (add_array_to_jar): Exit if write fails.
+
+2007-02-15  Dalibor Topic  <robilad@kaffe.org>
+
 	* jartool.c (get_next_arg): Changed len and pos to size_t.
 
 2007-02-15  Dalibor Topic  <robilad@kaffe.org>
